--- a/rpi-drop/css/ids.css
+++ b/rpi-drop/css/ids.css
@@ -46,6 +46,7 @@ DEBUG */
 
 #reload:hover{ border: solid 3px #f00; cursor: pointer; }
 #reload{
+    z-index: 245; 
     position: fixed; width: 38px; height: 38px; background: rgba(0,0,0, 0.5);
     box-shadow: 0 0 8px #000; box-sizing: border-box; text-align: center;
     color: #fff; font-weight: bold; text-shadow: 0 0 1px #000; 
