--- a/rpi-drop/css/ids.css
+++ b/rpi-drop/css/ids.css
@@ -182,7 +182,7 @@ content-footer {
 
 #content-menu-header{
     width: 100%; min-height: 50px; display: inline-block; padding: 10px; box-sizing: border-box; 
-    background: #333; border-bottom: dashed 1px #777;
+    background: #333; border-bottom: solid 1px #aaa;
 
 }
 
@@ -205,7 +205,7 @@ content-footer {
 /* =============================================================== */
 #content-menu-body{
     width: 100%; min-height: 100px; display: inline-block; padding: 10px; box-sizing: border-box; 
-    background: #07e; border-bottom: dashed 1px #777;
+    background: #07e; border-bottom: solid 1px #aaa;
 
 }
 
