--- a/rpi-drop/css/ids.css
+++ b/rpi-drop/css/ids.css
@@ -164,7 +164,7 @@ content-footer {
 /* =============================================================== */
 #top-nav-menu{ 
     width: 100%; min-height: 20px; display: inline-block; background: #fff; padding: 8px 0;
-    background: #8e5;
+    background: #07F;
 
 }
 
